--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DB_CONNECTION":"server=localhost; port=3306; database=db_WhatToSee; user=root; password=123456; Persist Security Info=False;"
+    "DB_CONNECTION":"server=localhost; port=3306; database=db_WhatToSee;database=db_WhatToSee; user=*user*; Persist Security Info=False;"
   },
   "AllowedHosts": "*"
 }
